# subliminal-learning-backdoor

./: .gitignore  README.md  brief.md  main.py  pyproject.toml
src/data_generation/: filter_student_data.py  generate_student_data.py  generate_teacher_data.py
src/evaluation/: evaluate_student.py  verify_teacher.py
src/training/: train_student.py  train_teacher.py
src/utils/: push_to_hub.py
