[project]
name = "subliminal-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.12.0",
    "datasets>=4.4.1",
    "fire>=0.7.1",
    "openai>=2.8.1",
    "peft>=0.18.0",
    "torch>=2.9.1",
    "transformers>=4.57.1",
    "trl>=0.25.1",
    "wandb>=0.23.0",
]
